# betterAC

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/data/: servers-snapshot.json
core/src/: args.rs  config.rs  fetch.rs  gamefiles.rs  install.rs  lib.rs  patches.rs  prefs.rs  proton.rs  reset.rs  servers.rs  setup.rs  wine.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/include/: ac_ffi.h
ffi/src/: lib.rs
gtk/: Cargo.toml  install.sh
gtk/data/: betterac.desktop
gtk/src/: browser.rs  launcher.rs  main.rs  window.rs
macos/: README.md  project.yml
macos/Sources/: ACCore.swift  BetterAC-Bridging-Header.h  BetterACApp.swift  LauncherView.swift  Models.swift  RootView.swift  SettingsView.swift  SetupView.swift  Theme.swift
packaging/: README.md  render-metadata.sh  render-metainfo.sh  source-tarball.sh
packaging/aur/: PKGBUILD.in
packaging/flatpak/: ac.betterac.BetterAC.yml  build-local.sh
packaging/homebrew/: betterac-formula.rb.in  betterac.rb.in
packaging/linux/: build-tarball.sh
packaging/macos/: build-dmg.sh
packaging/shared/: ac.betterac.BetterAC.metainfo.xml
