[package]
name = "ac-ffi"
version = "0.1.0"
edition = "2021"
description = "C ABI over ac-core for the macOS SwiftUI app."
license = "MIT"
build = "build.rs"

[dependencies]
ac-core = { path = "../core" }
serde_json = "1"

# cbindgen runs at build time and regenerates include/ac_ffi.h from the exported
# ABI, so the header the Swift app imports can never drift from the Rust.
[build-dependencies]
cbindgen = "0.27"

[lib]
name = "ac_ffi"
# staticlib so it links into the .app; rlib so `cargo test` can still touch it.
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"
