[package]
name = "betterac"
version = "0.1.0"
edition = "2021"
description = "A native GTK4 launcher for Asheron's Call on Linux"
license = "MIT"

[dependencies]
ac-core = { path = "../core" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
async-channel = "2"

[[bin]]
name = "betterac"
path = "src/main.rs"
